# avs-device-sdk

./: CMakeLists.txt
SampleApp/: CMakeLists.txt
SampleApp/src/: CMakeLists.txt  UIManager.cpp
